Refactoring GUI classes to remove warnings in code, reduce redundancy and make it more clean